@@ -1,21 +1,21 @@
 package com.coffee.americanote.cafe.repository.querydsl;
 
 import com.coffee.americanote.cafe.domain.entity.QCafe;
+import com.coffee.americanote.cafe.domain.response.CafeSearchResponse;
 import com.coffee.americanote.coffee.domain.entity.QCoffee;
 import com.coffee.americanote.coffee.domain.entity.QCoffeeFlavour;
 import com.coffee.americanote.like.domain.QLike;
-import com.coffee.americanote.mypage.domain.response.UserLikeCafeResponse;
 import com.coffee.americanote.review.domain.entity.QReview;
 import com.coffee.americanote.user.domain.entity.QUser;
 import com.querydsl.core.types.Projections;
 import com.querydsl.core.types.dsl.Expressions;
 import com.querydsl.core.types.dsl.MathExpressions;
+import com.querydsl.jpa.JPAExpressions;
 import com.querydsl.jpa.JPQLQueryFactory;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Repository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Repository
@@ -31,12 +31,15 @@ public class CafeQueryRepositoryImpl implements CafeQueryRepository {
     private final QReview review = QReview.review;
 
     @Override
-    public List<UserLikeCafeResponse> getAllUserLikeCafe(Long userId) {
-        return queryFactory.select(Projections.constructor(UserLikeCafeResponse.class,
+    public List<CafeSearchResponse> getAllUserLikeCafe(Long userId) {
+        return queryFactory.select(Projections.constructor(CafeSearchResponse.class,
                         cafe.id, cafe.name, cafe.imageUrl,
                         coffee.intensity, coffee.acidity,
                         Expressions.stringTemplate("group_concat({0})", coffeeFlavour.flavour).as("flavours"),
-                        MathExpressions.round(review.star.avg(), 1).as("avgStar")
+                        MathExpressions.round(review.star.avg(), 1).as("avgStar"),
+                        JPAExpressions.selectFrom(like)
+                                .where(like.userId.eq(userId).and(like.cafeId.eq(cafe.id)))
+                                .exists().as("hasLike")
                 ))
                 .from(user)
                 .leftJoin(like).on(like.userId.eq(user.id))
@@ -47,6 +50,27 @@ public class CafeQueryRepositoryImpl implements CafeQueryRepository {
                 .where(user.id.eq(userId))
                 .groupBy(cafe.id)
                 .stream()
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Override
+    public List<CafeSearchResponse> getAllSearchCafe(String keyword, Long userId) {
+        return queryFactory.select(Projections.constructor(CafeSearchResponse.class,
+                        cafe.id, cafe.name, cafe.imageUrl,
+                        coffee.intensity, coffee.acidity,
+                        Expressions.stringTemplate("group_concat({0})", coffeeFlavour.flavour).as("flavours"),
+                        MathExpressions.round(review.star.avg(), 1).as("avgStar"),
+                        JPAExpressions.selectFrom(like)
+                                .where(like.userId.eq(userId).and(like.cafeId.eq(cafe.id)))
+                                .exists().as("hasLike")
+                ))
+                .from(cafe)
+                .innerJoin(review).on(review.cafe.id.eq(cafe.id))
+                .innerJoin(coffee).on(coffee.cafe.id.eq(cafe.id))
+                .innerJoin(coffeeFlavour).on(coffeeFlavour.coffee.id.eq(coffee.id))
+                .where(cafe.name.contains(keyword))
+                .groupBy(cafe.id)
+                .stream()
+                .toList();
     }
 }
